style: 💄 fix grid gap

--- a/src/PresetComponent.scss
+++ b/src/PresetComponent.scss
@@ -45,7 +45,7 @@
         display: grid;
         width: 100%;
         grid-template-columns: repeat(3, 1fr);
-        gap: 0.5rem;
+        column-gap: 0.5rem;
 
         .preset-item-text {
             display: flex;
